# server_study

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  Troubleshooting.md  compile_flags.txt
Main/: Main.cpp
MultiThreading/: GlobalQueue.hpp  LocalQueue.hpp  Main.cpp  SchedulerContext.hpp  Worker.cpp
Network/: Client.cpp  IOCPEchoServer.cpp  Makefile
Network/Client/: Client.cpp  Client.hpp  ClientNetwork.cpp  ClientNetwork.hpp  Main.cpp
Network/Common/: Config.hpp  ISparsePool.hpp  Logger.hpp  MagicBuffer.cpp  MagicBuffer.hpp  NetUtils.hpp  ObjectPool.hpp  Protocol.hpp  SharedPoolPtr.hpp  SparsePool.hpp  SparseSet.hpp  SparseSetV2.hpp  WSAManager.hpp
Network/Common/Pool/: ISparsePool.hpp  ObjectPool.hpp  SharedPoolPtr.hpp  SparsePool.hpp  SparseSet.hpp
Network/IOCP/: IOCPEchoServer.cpp  IocpCore.cpp  IocpCore.hpp  IocpObject.hpp  Listener.cpp  Listener.hpp  MagicBuffer.cpp  MagicBuffer.hpp  Makefile  NetUtils.cpp  NetUtils.hpp  ObjectPool.hpp  OverlappedEx.hpp  Session.cpp  Session.hpp  WSAManager.hpp
Network/Legacy/: IOCPEcho.cpp  Makefile  MultiThreadEcho.cpp  MultithreadEcho.cpp  SingleThreadEcho.cpp
Network/Protocol/: Protocol.hpp
Network/Server/: IocpCore.cpp  IocpCore.hpp  Listener.cpp  Listener.hpp  Main.cpp  OverlappedEx.hpp  PacketHandler.cpp  PacketHandler.hpp  ServerService.hpp  ServerUtils.cpp  ServerUtils.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
Scheduler/: Main.cpp  Makefile  SchedulerContext.hpp  Worker.cpp  Worker.hpp
Scheduler/Legacy/: Main.cpp  SchedulerContext.hpp  Worker.cpp  Worker.hpp
Tests/: .clang-tidy  Client.cpp  Client.hpp  Main.cpp
Tests/01_Fragmentation/: 01.hpp  Main.cpp
Tests/01_Mice/: 01_Mice.hpp  Main.cpp
Tests/02_StickyPackets/: 02.hpp  Main.cpp
Tests/Base/: Client.cpp  Client.hpp
Tests/Integration/: 01_Fragmentation.cpp  02_StickyPackets.cpp  03_ConnectionStress.cpp  04_Broadcast.cpp  05_InvalidPackets.cpp
Tests/TestCase/: 01_Fragmentation.cpp  01_Fragmentation.hpp  02_StickyPackets.cpp  02_StickyPackets.hpp  03_ConnectionStress.cpp
Tests/Unit/: SparseSet.cpp
Tests/UnitTests/: SparseSet.cpp
